<resources>
    <string name="app_name">Restaurante</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="iniciarsesion">Iniciar Sesion</string>
    <string name="txtnousuario">No tiene usuario cree uno, </string>
    <string name="txtaqui"> aqui</string>
    <string name="txtrecuperar">¿Olvido su contraseña?, </string>
    <string name="recuperar"> Recuperela aqui</string>
    <string name="btnguardar" translatable="false">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_referencia">referencia</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="guardar">Guardar</string>
</resources>
