<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContenedorActivity"
    android:orientation="vertical">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/restaurantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurantes">

        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/favoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favoritos">

        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil">

        </com.google.android.material.tabs.TabItem>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/contenedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>