<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Formulario de registro">

        </TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">
            <ImageView
                android:layout_width="1000dp"
                android:layout_height="400dp"
                android:src="@drawable/logos_de_comida_vegetariana">
            </ImageView>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtnuevousuario"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/txtnuevacontrasena"/><!--para ocultar lo que se escribe-->

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/buttonagregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnguardar"
            android:layout_gravity="center"
            android:background="@color/primaryColor"
            android:textColor="#FFF"
            android:layout_marginTop="5dp"  />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>